# Pathos

./: .drstring.toml  .gitignore  .swiftformat  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  Makefile  Package.swift  Pathos.podspec  README.md  RELEASING.md  TODO  TODO.md  build.bat  buildtest.bat  make.bat  prepare.bat  project.yml  shell.bat
.github/: FUNDING.yml
.github/workflows/: amazon-linux-2.yml  automerge.yml  centos-8.yml  continuous-integration.yml  macos-10.15.yml  macos-11.15.yml  macos-11.yml  sdk.json  sync-to-master.yml  ubuntu-bionic.yml  ubuntu-focal.yml  windows.yml
Documentation/: APIReference.md  README.md  UserGuide.md  design.md  jazzy.json
Documentation/APIs/: Constants.md  FileTime.md  FileType.md  Metadata.md  NativeEncodingUnit.md  POSIXConstants.md  POSIXFileType.md  POSIXPathConvertible.md  POSIXPermissions.md  Path.md  PathConvertible.md  Permissions.md  PurePOSIXPath.md  PurePath.md  PureWindowsPath.md  README.md  SystemError.md  WindowsAttributes.md  WindowsConstants.md  WindowsFileType.md  WindowsPathConvertible.md
Documentation/_abstracts/: Manipulating Paths.md  Temporary Paths.md
Examples/: CMakeLists.txt
Examples/findfile/: main.swift
Examples/ls/: main.swift
Examples/metadata/: main.swift
Examples/mk/: main.swift
Examples/mkdir/: main.swift
Examples/readonly/: main.swift
Examples/rm/: main.swift
Resources/: release.xcconfig
Resources/Assets/: Arts.sketch
Scripts/: Dockerfile-develop-linux  Dockerfile-testing-linux  Package_windows.swift  develop-linux-docker.sh  docker.sh  ensure-jazzy.sh  ensure-sourcery.sh  ensure-swiftdoc.sh  ensure-swiftformat.sh  gen-doc.py  generate-docs.sh  generate-linux-test-manifest.sh  run-tests-linux-docker.sh  test_windows.swift  ubuntu.sh  update-cmake.py
Scripts/cmake_root/Sources/Pathos/: CMakeLists.txt
Scripts/cmake_root/Tests/: CMakeLists.txt
Scripts/githooks/: pre-commit
Sources/: CMakeLists.txt
Sources/LinuxHelpers/include/: _stat_with_btime.h  linux_metadata.h  module.modulemap  statx.h
Sources/Pathos/: Algorithms.swift  BinaryString.swift  Box+PurePath.swift  Box.swift  Bytes.swift  CMakeLists.txt  Constants.swift  FileMode.swift  FilePermission.swift  FileTime.swift  FileType.swift  LazyBoxed.swift  Metadata.swift  Path+Joining.swift  Path+Temporary.swift  Path.swift  PathParts.swift  PathRepresentable.swift  PathosError.swift  Permissions.swift  PurePath.swift  PurePathRepresentable.swift  SystemError.swift  attributes.swift  children.swift  constants.swift  copy.swift  currentWorkingDirectory.swift  glob.swift  helpers.swift  manipulate.swift  pathAnalysis.swift  pathAnalysisWithIO.swift  permissions.swift  posixHelpers.swift  readWrite.swift  symbolicLink.swift  symlink.swift  temporary.swift
Sources/Pathos/Darwin/: Metadata+Darwin.swift
Sources/Pathos/Linux/: Metadata+Glibc.swift
Sources/Pathos/POSIX/: Box+PurePOSIXPath.swift  FileTime+POSIX.swift  Metadata+Darwin.swift  Metadata+Glibc.swift  POSIXConstants.swift  POSIXFileType.swift  POSIXPathConvertible.swift  POSIXPermissions.swift  Path+Darwin.swift  Path+Glibc.swift  Path+POSIX.swift  PathParts+POSIX.swift  PurePOSIXPath.swift  posixHelpers.swift
Sources/Pathos/Windows/: Box+PureWindowsPath.swift  FileTime+Windows.swift  Metadata+Windows.swift  Path+Windows.swift  PathParts+Windows.swift  PureWindowsPath.swift  WindowsAttributes.swift  WindowsConstants.swift  WindowsFileType.swift  WindowsPathConvertible.swift
Sources/WindowsHelpers/: CMakeLists.txt
Sources/WindowsHelpers/include/: WindowsHelpers.h  module.modulemap  reparsedata.h
Sources/play/: main.swift
Tests/: CMakeLists.txt  LinuxMain.stencil  LinuxMain.swift  WindowsMain.swift
Tests/PathosTests/: AbsoluteTests.swift  BaseTests.swift  ChildrenTests.swift  CommonPathTests.swift  CopyFileTests.swift  CopyTests.swift  CurrentWorkingDirectoryTests.swift  DefaultTemporaryDirectorySearchingTests.swift  DefaultTemporaryDirectoryTests.swift  DeleteTests.swift  ExistsTests.swift  ExpandUserDirectoryTests.swift  FileExtensionTests.swift  FixtureSupport.swift  FixtureTestCase.swift  GlobTests.swift  HomeTests.swift  IsAbsoluteTests.swift  IsBlockDeviceTests.swift  IsCharacterDeviceTests.swift  IsDirectoryTests.swift  IsFileTests.swift  IsPipeTests.swift  IsSocketTests.swift  IsSymbolicLinkTests.swift  IsSymlinkTests.swift  JoinPathTests.swift  MakeAbsoluteTests.swift  MakeDirectoryTests.swift  MakeSymbolicLinkTests.swift  MakeSymlinkTests.swift  MetadataTests.swift  MoveTests.swift  NormalizePathTests.swift  POSIXBinaryStringTests.swift  POSIXPartsParsingTests.swift  POSIXPathInitializationTests.swift  POSIXPathJoiningTests.swift  PathBasenameTests.swift  PathDeletionTests.swift  (+54 more)
Tests/PathosTests/Fixtures/: broken_symbol
Tests/PathosTests/Fixtures/earth/: portal
Tests/PathosTests/Fixtures/world/: world_symbol
cmake/modules/: CMakeLists.txt  PathosConfig.cmake.in  SwiftSupport.cmake
scripts/: ensure-sourcery.sh  generate-linux-test-manifest.sh
